# minimal_mlops_dagshub

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
minimal_mlops/src/: evaluate.py
minimal_mlops/src/confs/: config.py  config.toml
minimal_mlops/src/feature_pipeline/: feature_engineer.py  feature_engineer_utils.py
minimal_mlops/src/inference_pipeline/: inference.py
minimal_mlops/src/training_pipeline/: trainer.py  trainer_utils.py
minimal_mlops/src/utils/: common.py
